complete otp verrify

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-auth-layout></app-auth-layout>
 <app-spinner *ngIf="showSpinner | async"></app-spinner>
+
+<!-- <app-face-verify></app-face-verify> -->
+
+<!-- <app-voting-panel></app-voting-panel> -->
