--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
       <div class="nav_bar">
   
         <div class="nav-content">
-          <p>Nature AI</p>
+          <p>Smart Voting System</p>
       </div>
         <div class="current-time">
           <span id="time">{{ currentTime | date: 'hh:mm:ss a' }}</span>
